[gd_scene load_steps=3 format=2]

[ext_resource path="res://VectorEdit.gd" type="Script" id=1]
[ext_resource path="res://dropdown_arrow.png" type="Texture" id=2]

[node name="VectorEdit" type="VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 329.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Size Flags" ]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 329.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4
_sections_unfolded = [ "Custom Constants" ]

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 4.0
margin_right = 321.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
columns = 3
_sections_unfolded = [ "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 289.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Name" type="Label" parent="MarginContainer/GridContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 38.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MenuButton" type="MenuButton" parent="MarginContainer/GridContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_right = 70.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
icon = ExtResource( 2 )
flat = true
align = 1
items = [ "Value", null, 0, false, false, -1, 0, null, "", false, "Range", null, 0, false, false, -1, 0, null, "", false ]

[node name="Padding" type="Container" parent="MarginContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 293.0
margin_right = 309.0
margin_bottom = 22.0
rect_min_size = Vector2( 16, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Vector" type="HBoxContainer" parent="MarginContainer/GridContainer"]
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 138.0
margin_right = 313.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 2
_sections_unfolded = [ "Size Flags" ]

[node name="Label" type="Label" parent="MarginContainer/GridContainer/Vector"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 8.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "X"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="XValue" type="SpinBox" parent="MarginContainer/GridContainer/Vector"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_right = 86.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
max_value = 100.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Size Flags" ]

[node name="Label2" type="Label" parent="MarginContainer/GridContainer/Vector"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 5.0
margin_right = 97.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Y"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="YValue" type="SpinBox" parent="MarginContainer/GridContainer/Vector"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 101.0
margin_right = 175.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
max_value = 100.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Size Flags" ]

[node name="VectorRange" type="HBoxContainer" parent="MarginContainer/GridContainer"]
editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 94.0
margin_right = 329.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 2
_sections_unfolded = [ "Size Flags" ]

[node name="Grid" type="GridContainer" parent="MarginContainer/GridContainer/VectorRange"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 235.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
columns = 4
_sections_unfolded = [ "Size Flags" ]

[node name="Label" type="Label" parent="MarginContainer/GridContainer/VectorRange/Grid"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "X Min"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="XValueMin" type="SpinBox" parent="MarginContainer/GridContainer/VectorRange/Grid"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_right = 116.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
max_value = 100.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Size Flags" ]

[node name="Label2" type="Label" parent="MarginContainer/GridContainer/VectorRange/Grid"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 5.0
margin_right = 157.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Y Min"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="YValueMin" type="SpinBox" parent="MarginContainer/GridContainer/VectorRange/Grid"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 161.0
margin_right = 235.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
max_value = 100.0
step = 0.01
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Size Flags" ]

[node name="Label3" type="Label" parent="MarginContainer/GridContainer/VectorRange/Grid"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 33.0
margin_right = 38.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "X Max"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="XValueMax" type="SpinBox" parent="MarginContainer/GridContainer/VectorRange/Grid"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_top = 28.0
margin_right = 116.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
max_value = 100.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Size Flags" ]

[node name="Label4" type="Label" parent="MarginContainer/GridContainer/VectorRange/Grid"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 33.0
margin_right = 157.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Y Max"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="YValueMax" type="SpinBox" parent="MarginContainer/GridContainer/VectorRange/Grid"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 161.0
margin_top = 28.0
margin_right = 235.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -100.0
max_value = 100.0
step = 0.01
page = 0.0
value = 1.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
prefix = ""
suffix = ""
_sections_unfolded = [ "Size Flags" ]

[connection signal="value_changed" from="MarginContainer/GridContainer/Vector/XValue" to="." method="_on_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/Vector/YValue" to="." method="_on_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/VectorRange/Grid/XValueMin" to="." method="_on_range_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/VectorRange/Grid/YValueMin" to="." method="_on_range_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/VectorRange/Grid/XValueMax" to="." method="_on_range_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/VectorRange/Grid/YValueMax" to="." method="_on_range_value_changed"]
